manifests/job-countdown/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-countdown
  labels:
    app: job-countdown
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: job-countdown
